# 2LayerPerceptronFromScratch

./: README.md  setup.cfg
src/2LP/: CodeFile.py  Loading_Data.py  ProfileFile.py  Profiling_Info.txt  TestFile.py
src/2LP/.cph/: .Loading_Data.py_dcc9c88a2ed3bc309a95c34d0edf13be.prob
src/2_Layer_Perceptron.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
