[metadata]
name = 2_Layer_Perceptron
version = 0.0.1
author = Anurag Shakya, Jayesh Joshi, Risabh Sinha and Spandan Ghosh
author_email = author@example.com
description = This is a 2 Layer Perceptron built from scratch without using any inbuilt library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src